--- a/index.html
+++ b/index.html
@@ -4,16 +4,37 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>web Developere Portfolio</title>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Open+Sans:ital,wght@0,300..800;1,300..800&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="styles/portfolio.css">
 </head>
-<body>
+<body class="open-sans-normal">
     <header>
-
+        <nav>
+            <h3 class="nav-title">Ma<span class="text-primary">r</span>y</h3>
+            <ul>
+                <li><a class="dark-2" href="">Portfolio</a></li>
+                <li><a class="dark-2" href="">Blog</a></li>
+                <li><a href=""><button class="btn-primary">Hire me</button></a></li>
+            </ul>
+        </nav>
+        <div class="banar">
+            <div class="banar-content">
+                <h4 class="banar-greetings dark-2">Hi, I am</h4>
+                <h1>Mary hardy</h1>
+                <p class="banner-description">shot what able cald new see hold.Friendly as an betrayed formerly he.Morning because as to society behaved moments </p>
+                <button class="btn-primary">Download cv</button>
+                <button class="btn-primary">Contact</button>
+            </div>
+            <img src="images/hardy.png" alt="">
+        </div>
     </header>
     <main>
 
     </main>
     <footer>
-        
+
     </footer>
 </body>
 </html>
