--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <link rel="stylesheet" href="styles/portfolio.css">
 </head>
 <body class="open-sans-normal">
-    <header>
+    <header class="header">
         <nav>
             <h3 class="nav-title">Ma<span class="text-primary">r</span>y</h3>
             <ul>
@@ -22,12 +22,12 @@
         <div class="banar">
             <div class="banar-content">
                 <h4 class="banar-greetings dark-2">Hi, I am</h4>
-                <h1>Mary hardy</h1>
+                <h1 class="banar-title">Mary hardy</h1>
                 <p class="banner-description">shot what able cald new see hold.Friendly as an betrayed formerly he.Morning because as to society behaved moments </p>
                 <button class="btn-primary">Download cv</button>
                 <button class="btn-primary">Contact</button>
             </div>
-            <img src="images/hardy.png" alt="">
+            <img class="banar-profile-pic" src="images/hardy.png" alt="">
         </div>
     </header>
     <main>
